compiler/toc-hir-lowering/tests/snapshots/lowering__lower_procedure_tys.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : procedure nps"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..22): "<root>"@(dummy)
      StmtBody@(src/main.t:0..22): []
        StmtItem@(src/main.t:0..22): ItemId(0)
          Type@(src/main.t:0..22): "_"@(src/main.t:5..6)
            Procedure@(src/main.t:9..22): [no params]
              Void@(src/main.t:9..22)
