compiler/toc-hir-lowering/tests/snapshots/lowering__lower_process_def-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    process empty_params()\n    end empty_params\n    "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..53): "<root>"@(dummy)
      StmtBody@(src/main.t:5..48): []
        StmtItem@(src/main.t:5..48): ItemId(0)
          Subprogram@(src/main.t:5..48): "empty_params"@(src/main.t:13..25) []
            Void@(src/main.t:5..27)
            StmtBody@(src/main.t:32..32): []
