compiler/toc-hir-lowering/tests/snapshots/lowering__lower_process_def-7.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: process end bloop
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..17): "<root>"@(dummy)
      StmtBody@(src/main.t:0..17): []
        StmtItem@(src/main.t:0..17): ItemId(0)
          Subprogram@(src/main.t:0..17): "<unnamed>"@(src/main.t:0..17)
            Void@(src/main.t:0..7)
            StmtBody@(src/main.t:8..8): []
error at src/main.t:8..11: unexpected token
| error for src/main.t:8..11: expected identifier, but found `end`
