compiler/toc-hir-lowering/tests/snapshots/lowering__lower_process_def-8.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: process end
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..11): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..11): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          Subprogram@(FileId(1), 0..11): "<unnamed>"@(FileId(1), 0..11)
            Void@(FileId(1), 0..7)
            StmtBody@(FileId(1), 8..8): []
error at (FileId(1), 8..11): unexpected token
| error for (FileId(1), 8..11): expected identifier, but found `end`

