compiler/toc-hir-lowering/tests/snapshots/lowering__lower_put_stmt-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: put

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..3): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..3): []
error in file FileId(1) at 0..3: unexpected end of file
| error in file FileId(1) for 0..3: expected expression after here

